# SeabertYuan.github.io

./: CNAME  Cargo.toml  README.md  flake.nix  index.html
.github/workflows/: build_deploy.yml  refresh-strava.yml
pages/: blog.html  home.html  portfolio.html  run.html
scripts/: index.js
src/: lib.rs
styles/: blog.css  main.css  portfolio.css  projects.css  run.css  styles.css
