[package]
name = "website"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.4.2", features = [ "wasm_js" ] }
gloo = "0.12.0"
wasm-bindgen = "=0.2.114"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'DomTokenList',
  'HtmlElement',
  'Node',
  'Window',
  'EventTarget',
]
