[package]
name = "website"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.4.2", features = [ "wasm_js" ] }
gloo = { version = "0.12.0", features = [ "futures" ] }
wasm-bindgen = "=0.2.114"
wasm-bindgen-futures = "=0.4.64"

[dependencies.web-sys]
version = "0.3.4"
features = [
  "CssStyleDeclaration",
  'Document',
  'Element',
  'DomTokenList',
  'HtmlElement',
  'HtmlImageElement',
  'HtmlCollection',
  'Node',
  'Window',
  'EventTarget',
]
